2006-12-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam.el (spam-ifile-path, spam-ifile-database-path)
	(spam-bogofilter-path): Use define-obsolete-variable-alias instead of
	make-obsolete-variable.
	(spam-bsfilter-path, spam-bsfilter-program)
	(spam-spamassassin-path, spam-spamassassin-program)
	(spam-sa-learn-path, spam-sa-learn-program): Rename variables.  Don't
	use "path" inappropriately.
	(spam-check-spamassassin, spam-spamassassin-register-with-sa-learn)
	(spam-check-bsfilter, spam-bsfilter-register-with-bsfilter): Use new
	variable names.

2006-12-28  Daiki Ueno  <ueno@unixuser.org>

	* password.el (password-cache-remove): Use clear-string to burn
	password, if available.

2006-12-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-msg.el (gnus-message-citation-mode): Fix autoload.

	* gnus-cite.el (gnus-message-highlight-citation): Move to gnus-msg.el.

	* gnus-msg.el (gnus-setup-message): Add gnus-message-citation-mode.
	(gnus-message-highlight-citation): Move defcustom here from
	gnus-cite.el.
	(gnus-message-citation-mode): Autoload.

	* gnus-cite.el: Adjust Oliver's code to Gnus namespace.  Add some
	checks to make it compile with XEmacs.
	(gnus-message-citation-mode): New minor mode.
	(gnus-message-max-citation-depth, gnus-message-citation-keywords)
	(gnus-message-highlight-citation): New variables.
	(gnus-message-search-citation-line)
	(gnus-message-add-citation-keywords)
	(gnus-message-remove-citation-keywords)
	(turn-on-gnus-message-citation-mode)
	(turn-off-gnus-message-citation-mode): New functions.

2006-12-26  Oliver Scholz  <epameinondas@gmx.de>

	* gnus-cite.el: Enable highlighting of different citation levels in
	message-mode.

2006-12-26  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-make-fqdn): Fix comment.
	(message-bogus-system-names): Add ".local".

	* spam.el (spam-ifile-path, spam-ifile-program)
	(spam-ifile-database-path, spam-ifile-database)
	(spam-bogofilter-path, spam-bogofilter-program): Rename variables.