@@ -1,5 +1,8 @@
 2006-12-28  Reiner Steib  <Reiner.Steib@gmx.de>
 
+	* spam.el: Revert to make-obsolete-variable because
+	define-obsolete-variable-alias is not supported in Emacs 21.
+
 	* spam.el (spam-ifile-path, spam-ifile-database-path)
 	(spam-bogofilter-path): Use define-obsolete-variable-alias instead of
 	make-obsolete-variable.
